# hbreader

./: .gitignore  ChangeLog  Pipfile  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/:  test.yaml
avidreader/: __init__.py
hbreader/: __init__.py
tests/: generate_examples.py  test_ify.py  test_ssl.py
tests/data/: test data 1.txt  test_8859.txt  test_utf8.txt
tests/server/: README.md  db.sh  dr.sh  ds.sh
