[metadata]
name = avidreader
url = https://github.com/hsolbrig/avidreader
author = Harold Solbrig
author-email = solbrig@jhu.edu
summary = A generic file/url/string opener and reader
license = CC0 1.0 Universal
python-requires = >=3.7
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    avidreader

