[metadata]
name = hbreader
url = https://github.com/hsolbrig/hbreader
author = Harold Solbrig
author-email = solbrig@jhu.edu
summary = Honey Badger reader - a generic file/url/string open and read tool
license = CC0 1.0 Universal
python-requires = >=3.7
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    hbreader

